@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-06T08:17:32Z",
-  "count_outdated" : 127,
-  "uniques_outdated" : 107,
+  "timestamp" : "2023-07-07T08:16:32Z",
+  "count_outdated" : 128,
+  "uniques_outdated" : 108,
   "count" : 143,
   "uniques" : 118,
   "clones" : [
-    {
-      "timestamp": "2023-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-01T00:00:00Z",
       "count": 1,
