@@ -1,12 +1,7 @@
 {
-  "count": 16,
+  "count": 15,
   "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2023-06-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-01T00:00:00Z",
       "count": 1,
