@@ -1,3 +1,12 @@
+2023-07-07T08:16:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5484289395 # 968
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
+* notice: last 14d: unq all: 9 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 107 127 / 118 143
+* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 118 143
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-23] / []
+
 2023-07-06T08:17:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5473158837 # 965
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
